force-app/main/default/objects/Report_Emailer_Setting__mdt/fields/Report_Export_File_Name__c.field-meta.xml
<CustomField>
    <fullName>Report_Export_File_Name__c</fullName>
    <inlineHelpText>This will be the file name of the export. Eg: filename.csv</inlineHelpText>
    <label>Report Export File Name</label>
    <length>50</length>
    <type>Text</type>
</CustomField>