force-app/main/default/objects/Report_Emailer_Setting__mdt/fields/Report_Name__c.field-meta.xml
<CustomField>
    <fullName>Report_Name__c</fullName>
    <label>Report Name</label>
    <length>200</length>
    <type>Text</type>
</CustomField>